# psi-agent

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  README_CN.md  README_zh.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: auto-alpha-tag.yml  ci.yml
examples/a-simple-bash-only-workspace/systems/: system.py
examples/a-simple-bash-only-workspace/tools/: bash.py
examples/an-openclaw-like-workspace/: AGENTS.md  DIFF.md  MEMORY.md  OPENCLAW_SYSTEM_PROMPT_COMPONENTS.md
examples/an-openclaw-like-workspace/systems/: system.py
examples/an-openclaw-like-workspace/tools/: bash.py  edit.py  read.py  write.py
openspec/changes/ai-module-consistency/: design.md  proposal.md  tasks.md
openspec/changes/ai-module-documentation/: tasks.md
openspec/changes/fix-telegram-message-not-modified/: design.md  tasks.md
openspec/changes/fix-telegram-streaming-interval/: design.md
openspec/changes/fix-telegram-typing-indicator/: design.md
openspec/changes/fix-test-non-top-level-imports/: proposal.md
openspec/changes/fix-workspace-path-resolution/: tasks.md
openspec/changes/improve-test-coverage/: proposal.md
openspec/changes/robust-streaming-delta-handling/: proposal.md
openspec/changes/session-code-quality/: tasks.md
openspec/specs/ai-error-path-testing/: spec.md
src/psi_agent/: __init__.py  __main__.py
tests/: __init__.py  test_main.py
tests/ai/: __init__.py
tests/channel/: __init__.py  test_cli.py  test_repl_cli.py  test_telegram_cli.py
tests/session/: __init__.py  test_cli.py  test_config.py  test_history.py  test_runner.py  test_schedule.py  test_server.py  test_tool_executor.py  test_tool_loader.py  test_tool_result_repair.py  test_types.py  test_workspace_watcher.py
tests/utils/: __init__.py  test_proctitle.py
tests/workspace/: __init__.py  test_integration.py  test_manifest.py  test_mount.py  test_mount_api.py  test_mount_cli.py  test_pack.py  test_pack_cli.py  test_snapshot.py  test_snapshot_api.py  test_snapshot_cli.py  test_umount.py  test_umount_cli.py  test_unpack.py  test_unpack_cli.py
(+757 files in other folders)
