[project]
name = "psi-agent"
version = "0.1.0"
description = "A portable and componentized agent framework"
readme = "CLAUDE.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Hao Zhang" }]
dependencies = [
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    "loguru>=0.7.0",
    "tyro>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
psi-ai-openai-completions = "psi_agent.ai.openai_completions.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/psi_agent"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]